[package]
name = "gizmo-db"
description = "An embedded graph database with a powerful query engine. "
version = "0.0.0"
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[dependencies]
ordered-float = "1.0"

[dependencies.regex]
version = "1.3"
# default-features = false
# # regex currently requires the standard library, you must re-enable it.
# features = ["std"]

[dev-dependencies]
maplit = "1.0.2"